--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,5 @@
         "titleBar.activeBackground": "#403338",
         "titleBar.activeForeground": "#FBFAFB"
     },
-    "window.title": "${dirty}${activeEditorShort}${separator}${rootName}${separator}${appName} ${separator} [Branch: ExportChildren]"
+    "window.title": "${dirty}${activeEditorShort}${separator}${rootName}${separator}${appName} ${separator} [Branch: Save-Out-Open-Reference]"
 }
